Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/MultipleReturn.ru

struct A{}
impl A{
.(){}
fn m1() -> Int{
if(true){
ret 1;
}else{
ret true;}
}
}

start{}